<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radius_selector"
                android:textColor="@color/tv_color"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/tv_color"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:thumb="@drawable/ic_thumb" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="7dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100m"
                android:textColor="@color/tv_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/_5_km"
                android:textColor="@color/tv_color"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/default1"
                android:textAllCaps="true"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="3"
                android:text="@string/nyc"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_current_loc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/current"
                android:textAllCaps="true"
                android:textColor="@color/red" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/restaurants_not_found"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:visibility="gone" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_restaurants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@color/white" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />


</LinearLayout>